# guilite

./: MANIFEST.in  README.md  pyproject.toml  setup.py
app/static/: main.js  style.css
examples/: add_and_multiply_simulators.py  basic_example.py  demo_engine.py  demo_simulator.py  engine_report_demo.py  mysimulator.py  run_webapp.py
guilite/: __init__.py  report_generator.py  simulator.py  web_interface.py
guilite/examples/: add_and_multiply_simulators.py  mysimulator.py  run_webapp.py
guilite/reportgenerator/: simulatorbase.py
reportgenerator/: engine.py  simulatorapp.py
reportgenerator/templates/: index.html
tests/: __init__.py  test_report_generator.py  test_simulator.py
